add component para criar posts e ajustes nos layots de visualiazação e listagens

--- a/src/app/list-news/list-news.component.html
+++ b/src/app/list-news/list-news.component.html
@@ -30,7 +30,7 @@
       <input placeholder="Procurar por...">
       <span class="fa fa-search"></span>
     </div>
-    <button class="button createPost">Criar Notícia</button>
+    <button class="button createPost" (click)="registerNotice()">Criar Notícia</button>
   </ul>
 
 </aside>
@@ -52,5 +52,6 @@
       <input placeholder="Procurar por...">
       <span class="fa fa-search"></span>
     </div>
+    <button class="button createPost" (click)="registerNotice()">Criar Notícia</button>
   </ul>
 </div>
